--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/camera": "^5.17.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.17.1",
     "@ionic-native/google-plus": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -29,6 +30,7 @@
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googleplus": "^8.2.0",
     "core-js": "^2.5.4",
     "firebase": "^7.3.0",
@@ -79,7 +81,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "browser",
